added user object
